Fixed population bar misaligned when alignment is on
Former-commit-id: c82331927c253ff685750adf490275b25f5d274f

--- a/assets/less/edware.less
+++ b/assets/less/edware.less
@@ -14,7 +14,7 @@ body {
       box-shadow: 0 0 5px rgba(89, 119, 162, 1);
       -webkit-box-shadow: 0 0 5px rgba(89, 119, 162, 1); 
       -moz-box-shadow: 0 0 5px rgba(89, 119, 162, 1);
-      border:1px solid rgba(89, 119,162, 0.8); 
+      border:0px solid rgba(89, 119,162, 0.8); 
     }
 }
 
